--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.1/dist/flowbite.min.css" />
 
 </head>
-<body style="    background-color:#feb63f; " >
+<body style="background-color:#feb63f; " >
 
-  <img src="/build/images/img.gif" class="absolute w-[47%] -z-10 mt-0 right-0" />
+  <div>
+  
+  <img src="/build/images/img.gif" class="absolute w-[48%] -z-10 mt-0 right-0" id="gifim"/>
+</div>
+
 <nav class="bg-transparent px-2 sm:px-4 py-2.5 rounded h-20">
   <div class="container flex flex-wrap justify-between items-center mx-auto">
   <a href="#" class="flex items-center">
@@ -34,19 +38,40 @@
 
 
 
-  <section class="flex flex-auto justify-center mt-20">
+  <section class="flex flex-auto justify-items-start mt-20">
     <!-- the larger col has a class of wider -->
   
 
-     <div class="flex w-1/2" id="minting-dapp">
+     <div class="flex w-1/2 ml-20 mt-10" id="minting-dapp">
        
     </div>
   </section>
 
 
 
-
+  <svg id="svg_img_comp-l1m8j7bn" class="_1b5KK"><defs><filter id="sangria-comp-l1m8j7bn" color-interpolation-filters="sRGB">
+    <feComponentTransfer result="srcRGB"></feComponentTransfer>
+    <feComponentTransfer><feFuncR type="linear" slope="0.95"></feFuncR><feFuncG type="linear" slope="0.95"></feFuncG><feFuncB type="linear" slope="0.95"></feFuncB></feComponentTransfer>
+<feComponentTransfer><feFuncR type="linear" slope="1.35" intercept="-0.18"></feFuncR>
+<feFuncG type="linear" slope="1.35" intercept="-0.18"></feFuncG>
+<feFuncB type="linear" slope="1.35" intercept="-0.18"></feFuncB></feComponentTransfer>
+<feColorMatrix type="saturate" values="0.5" result="saturation"></feColorMatrix>
+<feColorMatrix type="matrix" values="0 0 0 0 0.7803921568627451
+0 0 0 0 0.07058823529411765
+0 0 0 0 0.8862745098039215
+0 0 0 1 0" in="SourceGraphic" result="color"></feColorMatrix>
+<feComponentTransfer in="color" result="color_alpha"><feFuncA type="linear" slope="0.08"></feFuncA></feComponentTransfer>
+<feBlend mode="multiply" in="color_alpha" in2="saturation" result="source"></feBlend>
+    <feComponentTransfer></feComponentTransfer>
+</filter></defs></svg>
 </main>
+<script>
+
+
+
+
+</script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/flowbite@1.4.1/dist/flowbite.js"></script>
 </body>
 </html>
