--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.1/dist/flowbite.min.css" />
 
 </head>
-<body style="background-color:#feb63f; " >
+<body style="background-color:#000000; " >
 
   <div>
   
-  <img src="/build/images/img.gif" class="absolute w-[48%] -z-10 mt-0 right-0" id="gifim"/>
+  <img src="/build/images/img2.gif" class="absolute w-[48%] -z-10 mt-0 right-0" id="gifim" style="width: 880px;height: 881px;object-fit: cover;object-position: 50% 50%;box-shadow: 0 0 0 #000;-webkikt-filter: url('#sangria-comp-l1m8j7bn');filter: url('#sangria-comp-l1m8j7bn');"/>
 </div>
 
 <nav class="bg-transparent px-2 sm:px-4 py-2.5 rounded h-20">
