--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
 </filter></defs></svg>
 </main>
 <script>
-
-
-
+var viewportWidth = window.visualViewport.width;
+if(viewportWidth<500){
+document.getElementById('minting-dapp').className = 'flex w-1/2 mt-10';
+}
 
 </script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
